nova_tests/plan118/neg/t4_neg_ptr_order_compare.nv
// Plan 118 Ф.4 NEG-T4.17 / A17 — pointer-pointer order comparison
// (`<`/`<=`/`>`/`>=`) requires unsafe context (D216 §6 cast/compare table).
// Plan 118.7: `unsafe { &x }` → `unsafe { raw &x }`.
//
// EXPECT_COMPILE_ERROR E_PTR_ORDER_COMPARE_REQUIRES_UNSAFE

module neg.t4_neg_ptr_order_compare

test "rejects pointer < pointer outside unsafe" {
    ro x = 10
    ro y = 20
    ro p = unsafe { raw &x }
    ro q = unsafe { raw &y }
    ro lt = p < q
    assert(lt == lt)
}
